Fix library type of tcl binding
Building the tcl binding as a SHARED type library means that an INSTALL of
that target is treated as a RUNTIME target on DLL platforms, which currently
has no DESTINATION provided.

Change the type to MODULE (the same as other bindings), as an INSTALL of a
target of that type uses the LIBRARY target on all platforms.

--- a/bindings/tcl/CMakeLists.txt
+++ b/bindings/tcl/CMakeLists.txt
@@ -21,7 +21,7 @@ ADD_CUSTOM_COMMAND (
 ADD_DEFINITIONS(-Wno-unused)
 INCLUDE_DIRECTORIES (${TCL_INCLUDE_PATH})
 
-ADD_LIBRARY (bindings_tcl SHARED solv_tcl.c)
+ADD_LIBRARY (bindings_tcl MODULE solv_tcl.c)
 SET_TARGET_PROPERTIES (bindings_tcl PROPERTIES PREFIX "" OUTPUT_NAME "solv-${VERSION}" INSTALL_NAME_DIR "${TCL_INSTALL_DIR}")
 TARGET_LINK_LIBRARIES (bindings_tcl libsolvext libsolv ${TCL_LIBRARY} ${SYSTEM_LIBRARIES})
 INSTALL (TARGETS bindings_tcl LIBRARY DESTINATION ${TCL_INSTALL_DIR})
