Specify source directoy for cmake call
This becomes mandatory with cmake 3.13.3.

--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -221,7 +221,7 @@ CMAKE_FLAGS="-DMAGEIA=1"
 CMAKE_FLAGS="-DSUSE=1"
 %endif
 
-cmake	$CMAKE_FLAGS \
+cmake . $CMAKE_FLAGS \
 	-DCMAKE_INSTALL_PREFIX=%{_prefix} \
 	-DLIB=%{_lib} \
 	-DCMAKE_VERBOSE_MAKEFILE=TRUE \
