--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,23 @@
 language: C
-before_script: sudo apt-get install cmake
-script: mkdir build && cd build && cmake -DDEBIAN=1 -DMULTI_SEMANTICS=1 .. && make && make test
-
-
+matrix:
+  fast_finish: true
+  include:
+    - os: linux
+      addons:
+        apt:
+          packages:
+          - cmake
+    - os: osx
+      osx_image: xcode9.4
+      compiler: clang
+      addons:
+        homebrew:
+          packages:
+          - cmake
+          - zlib
+script:
+- mkdir build
+- cd build
+- cmake -DDEBIAN=1 -DMULTI_SEMANTICS=1 ..
+- make
+- make test
