--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ FOREACH(tcdir testcases libsolv-zypptestcases)
         FOREACH(dir ${dirs})
 	    IF(IS_DIRECTORY ${dir})
 		FILE(RELATIVE_PATH myname "${CMAKE_CURRENT_SOURCE_DIR}/${tcdir}" ${dir})
+		STRING(REPLACE \\ \\\\ dir ${dir})
 		ADD_TEST(${myname} ${CMAKE_CURRENT_SOURCE_DIR}/runtestcases ${CMAKE_BINARY_DIR}/tools/testsolv ${dir})
 	    ENDIF(IS_DIRECTORY ${dir})
         ENDFOREACH(dir)
