Split testcase repo reading/writing into repo_testcase.c
This is done so that programs that just want to read/write
repos in testcase format do not need to drag in all of the
solver code. (This matters only for static linking, of course.)

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -1,5 +1,5 @@
 SET (libsolvext_SRCS
-    solv_xfopen.c testcase.c)
+    solv_xfopen.c testcase.c repo_testcase.c)
 
 SET (libsolvext_HEADERS
     tools_util.h solv_xfopen.h testcase.h)
